[package]
name = "huffman_coding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = { version = "0.6.3", features = ["serde"] }
rayon = "1.7.0"
rmp-serde = "1.1.2"
serde = { version = "1.0.188", features = ["derive"] }
